# remetra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  LICENSE  README-DEV.md  README.md  docker-compose.yml  justfile  package-lock.json  railway.json
backend/: .coveragerc  conftest.py  database.py  main.py  mock_datasets.json  pyproject.toml  pytest.ini  sporatic_mock_datasets.json  start.sh
backend/analysis/: algorithm.py  data.py  models.py  per_ingredient_counts.py  search.py
backend/examples/: example_pydantic_models.py  example_router.py  example_service_layer.py
backend/middleware/: logging_middleware.py
backend/models/: KnowledgeChunk.py  __init__.py  food.py  food_log.py  knowledge_chunk.py  metrics.py  symptom.py  symptom_log.py  symptom_log_model.py  tag.py  user.py
backend/notebooks/: requirements.txt
backend/repositories/: chunk_repository.py  food_log_repository.py  food_repository.py  metrics_repository.py  symptom_log_repo.py  symptom_log_repository.py  symptom_repository.py  tag_repository.py  user_repository.py
backend/routers/: algorithm_router.py  auth.py  create_food_router.py  food_log_router.py  food_router.py  ingest_router.py  symptom_log_route.py  symptom_log_router.py  symptom_router.py  tag_router.py
backend/schemas/: algorithm.py  auth.py  chunk.py  food.py  food_log.py  symptom.py  symptom_log.py  tag.py  user.py
backend/scripts/: init_db.py  seed.py  seed_dev_user.py  seed_knowledge.py
backend/services/: RAGTaggingService.py  algorithm_service.py  auth_service.py  food_log_service.py  (+9 more)
(+129 files in other folders)
